# computerEmulators

./: .gitignore
mos6502Emulator/: 6502main.c  CMakeLists.txt  cpu6502.c  cpu6502.h  testLoad.c  testLoad.h  testStack.c  testStack.h  testStore.c  testStore.h
mos6502Emulator/CPU/: cpu6502.c  cpu6502.h
mos6502Emulator/tests/: TestFuncions.c  TestFuncions.h  testAritimetic.c  testAritimetic.h  testBrach.c  testBrach.h  testIncDc.c  testIncDc.h  testJmp.c  testJmp.h  testLoad.c  testLoad.h  testLogic.c  testLogic.h  testStack.c  testStack.h  testStore.c  testStore.h  testTranfers.c  testTranfers.h
simple8bitProcessorInHaskell/: main.hs
